Fixed table alignment

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@
   --headerHeight: 5rem;
   --containerPadding: 10%;
 
-  /*Elevations*/
+  /*Elevations inpriation from material UI*/
   --level-1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
   --level-2: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   --level-3: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
@@ -141,6 +141,10 @@ table {
 td,
 th {
   padding: 10px 20px;
+}
+
+th {
+  text-align: left;
 }
 
 tr.header {
